tests/compile_fail/into/mixed_field_skip_types.stderr
error: unexpected token
 --> tests/compile_fail/into/mixed_field_skip_types.rs:3:16
  |
3 |     #[into(skip, i32)]
  |                ^
